--- a/icmake/INSTALL.im
+++ b/icmake/INSTALL.im
@@ -2,32 +2,31 @@
     The locations of the binaries, the man pages and the documentation
     ==================================================================
  
-    Note: when changing the location to another location, make sure the
-    icmake-path definitions in the top lines of all executable icmake 
-    scripts (e.g., the `./unix' script) are changed accordingly.
- 
-    `unix doc2man' will install manpages in the CATDIR directory
-    `unix install' will install the binaries in the BINDIR directory
-
-    Note that BINDIR is also used in the first line of the unix-script.
- 
-    If you don't use /usr/bin, make sure you adapt the first line
-    in the 'unix' script *AND* the BINDIR define 
- 
     The settings in this file are according to the Debian File Standard
+    Change them according to your tastes if you think they should be
+    different. 
 
-    Alternate definitions may be kept in this file, on lines starting 
-    with  //
+    All locations are relative to a specifiable base-directory.
+
+		BINDIR      the binary programs and scripts
+		SKELDIR     the icmstart-script skeleton files
+		MANDIR      the base directory of man-pages (under MANDIR/man1 and
+                    MANDIR/man2) 
+		LIBDIR      icmake's support programs
+		CONFDIR     the system-wide configuration files (AUTHOR, VERSION, 
+                    icmstart.rc)
+		DOCDIR      various doc-files (e.g., changelog)
+		DOCDOCDIR   more extensive documentation (icmake.ps, examples)
 */
 
 
 // Define EXTENSION as ".exe" when compiling for CYGWIN
 //#define EXTENSION   ".exe"
 
-#define BINDIR      "/usr/bin"
-#define SKELDIR     "/usr/share/icmake"
-#define MANDIR      "/usr/share/man"
-#define LIBDIR      "/usr/lib/icmake"
-#define CONFDIR     "/etc/icmake"
-
-
+#define BINDIR      "usr/bin"
+#define SKELDIR     "usr/share/icmake"
+#define MANDIR      "usr/share/man"
+#define LIBDIR      "usr/lib/icmake"
+#define CONFDIR     "etc/icmake"
+#define DOCDIR      "usr/share/doc/icmake"
+#define DOCDOCDIR   "usr/share/doc/icmake-doc"
